--- a/Config&Macros/printer.cfg
+++ b/Config&Macros/printer.cfg
@@ -52,6 +52,9 @@ enable_force_move: True
 [exclude_object]
 # Needed for adaptative bed mesh
 
+[respond]
+# Needed for MacroSteps Plugin
+
 #####################################################################
 #  File location of stored variables
 #####################################################################
@@ -88,7 +91,7 @@ path: ~/printer_data/gcodes
 
 [include macro_beeper.cfg]
 
-[include macro_avoid_klicky.cfg]
+#[include macro_avoid_klicky.cfg]
 
 [include macro_set_status.cfg]
 
@@ -111,7 +114,7 @@ path: ~/printer_data/gcodes
 
 # Klicky
 # https://github.com/jlas1/Klicky-Probe
-[include klipper/config/klicky-probe.cfg]
+#[include klipper/config/klicky-probe.cfg]
 
 # Purge bucket
 # https://github.com/Hartk-PrinterConfigs/DoomConfig/blob/master/purge.cfg
@@ -132,6 +135,32 @@ path: ~/printer_data/gcodes
 #   Macros Simples
 #####################################################################
     
+[gcode_macro AXIS_TEST]
+description: Run small test just in a Y axis
+gcode:
+    {% set verbose = params.VERBOSE|default(true) %}
+    {% set min = params.MIN|default(5)|int %}
+    {% set max = params.MAX|default(80)|int %}
+    {% set axis = params.AXIS|default("y")|string %}
+
+    TEST_RESONANCES AXIS={axis} FREQ_START={min} FREQ_END={max} HZ_PER_SEC=0.5
+    M400
+
+    {% if verbose %}
+        RESPOND MSG="Graphs generation... Please wait a minute or two and look in the configured folder."
+    {% endif %}
+    RUN_SHELL_COMMAND CMD=plot_graph PARAMS=SHAPER
+
+[gcode_macro SPOT_TEST]
+description: Run small test around a certain frequency
+gcode:
+    {% set FREQ = params.FREQ|default(25)|int %}
+    {% set DUR = params.DUR|default(10)|int %}
+    {% set AXIS = params.AXIS|default("y")|string %}
+
+    TEST_RESONANCES OUTPUT=raw_data AXIS={AXIS} FREQ_START={FREQ-1} FREQ_END={FREQ+1} HZ_PER_SEC={1/(DUR/3)}
+    M400
+
 [gcode_macro VARIABLES]
 variable_level_age: 0
 gcode:
@@ -222,7 +251,6 @@ gcode:
 #*# pid_kd = 320.849
 #*#
 #*# [stepper_z]
-#*# position_endstop = 0.856
 #*#
 #*# [bed_mesh default]
 #*# version = 1
