--- a/Config&Macros/config_adxl.cfg
+++ b/Config&Macros/config_adxl.cfg
@@ -1,14 +1,14 @@
 [adxl345]       #RC Adicionado Acelerômetro
 cs_pin: rpi:None
-axes_map: z, y, x
+axes_map: -z, -y, -x
 
 [resonance_tester]      #RC Adicionado Acelerômetro
 accel_chip: adxl345
 probe_points:
-    150, 150, 20  # an example
+    150, 150, 50  # an example
 
 [input_shaper]          #RC Adicionado Acelerômetro Medição fria em 11/05/22
-shaper_freq_x: 66.2
-shaper_type_x: ei
-shaper_freq_y: 43.8
-shaper_type_y: 2hump_ei
+shaper_freq_x: 53.0
+shaper_type_x: zv
+shaper_freq_y: 35.6
+shaper_type_y: mzv
