--- a/Config&Macros/config_probe.cfg
+++ b/Config&Macros/config_probe.cfg
@@ -5,56 +5,69 @@
 [idle_timeout]
 timeout: 1800
 
-#[safe_z_home] #RC seção comentada por causa do klicky
-##  XY Location of the Z Endstop Switch
-##  Update -10,-10 to the XY coordinates of your endstop pin 
-##  (such as 157,305) after going through Z Endstop Pin
-##  Location Definition step.
-#home_xy_position:203,300    #RC Atualizado
-#speed:100
-#z_hop:10
+[safe_z_home]
+home_xy_position: 150,150
+#   A X, Y coordinate (e.g. 100, 100) where the Z homing should be
+#   performed. This parameter must be provided.
+speed: 300.0
+#   Speed at which the toolhead is moved to the safe Z home
+#   coordinate. The default is 50 mm/s
+z_hop: 5
+#   Distance (in mm) to lift the Z axis prior to homing. This is
+#   applied to any homing command, even if it doesn't home the Z axis.
+#   If the Z axis is already homed and the current Z position is less
+#   than z_hop, then this will lift the head to a height of z_hop. If
+#   the Z axis is not already homed the head is lifted by z_hop.
+#   The default is to not implement Z hop.
+z_hop_speed: 15.0
+#   Speed (in mm/s) at which the Z axis is lifted prior to homing. The
+#   default is 15 mm/s.
+#move_to_previous: False
+#   When set to True, the X and Y axes are reset to their previous
+#   positions after Z axis homing. The default is False.
 
-[z_calibration]     #RC Incluido - Klicky + Zoffset
-nozzle_xy_position: 204,299.5
+
+#[z_calibration]     #RC Incluido - Klicky + Zoffset
+#nozzle_xy_position: 204,299.5
 #   A X, Y coordinate (e.g. 100,100) of the nozzle, clicking on the Z endstop.
-switch_xy_position: 200,276
+#switch_xy_position: 200,276
 #   A X, Y coordinate (e.g. 100,100) of the probe's switch body, clicking on
 #   the Z endstop.
-bed_xy_position: 150,150 #default from relative_reference_index of bed_mesh
+#bed_xy_position: 150,150 #default from relative_reference_index of bed_mesh
 #   a X, Y coordinate (e.g. 100,100) where the print surface (e.g. the center
 #   point) is probed. These coordinates will be adapted by the
 #   probe's X and Y offsets. The default is the relative_reference_index
 #   of the configured bed_mesh, if configured. It's possible to change the relative
 #   reference index at runtime or use the GCode argument BED_POSITION of CALIBRATE_Z.
-switch_offset: 0.54 #0.430 #0.442
+#switch_offset: 0.54 #0.430 #0.442
 #   The trigger point offset of the used mag-probe switch.
 #   Larger values will position the nozzle closer to the bed.
 #   This needs to be find out manually. More on this later
 #   in this section..
-max_deviation: 5
+#max_deviation: 5
 #   The maximum allowed deviation of the calculated offset.
 #   If the offset exceeds this value, it will stop!
 #   The default is 1.0 mm.
 #samples: 5 #default from "probe:samples" section
 #   The number of times to probe each point. The probed z-values
 #   will be averaged. The default is from the probe's configuration.
-samples_tolerance: 0.0051 #default from "probe:samples_tolerance" section
+#samples_tolerance: 0.0051 #default from "probe:samples_tolerance" section
 #   The maximum Z distance (in mm) that a sample may differ from other
 #   samples. The default is from the probe's configuration.
-samples_tolerance_retries: 10 #default from "probe:samples_tolerance_retries" section
+#samples_tolerance_retries: 10 #default from "probe:samples_tolerance_retries" section
 #   The number of times to retry if a sample is found that exceeds
 #   samples_tolerance. The default is from the probe's configuration.
 #samples_result: median #default from "probe:samples_result" section
 #   The calculation method when sampling more than once - either
 #   "median" or "average". The default is from the probe's configuration.
-clearance: 10
+#clearance: 10
 #   The distance in mm to move up before moving to the next
 #   position. The default is two times the z_offset from the probe's
 #   configuration.
 #position_min: -5 #default from "stepper_z:position_min" section.
 #   Minimum valid distance (in mm) used for probing move. The
 #   default is from the Z rail configuration.
-speed: 300
+#speed: 300
 #   The moving speed in X and Y. The default is 50 mm/s.
 #lift_speed: default from "probe:lift_speed" section
 #   Speed (in mm/s) of the Z axis when lifting the probe between
@@ -63,17 +76,17 @@ speed: 300
 #probing_speed: 8 #default from "stepper_z:homing_speed" section.
 #   The fast probing speed (in mm/s) used, when probing_first_fast
 #   is activated. The default is from the Z rail configuration.
-probing_second_speed: 2 #default from "stepper_z:second_homing_speed" section.
+#probing_second_speed: 2 #default from "stepper_z:second_homing_speed" section.
 #   The slower speed (in mm/s) for probing the recorded samples.
 #   The default is second_homing_speed of the Z rail configuration.
-probing_retract_dist: 0.8 #default from "stepper_z:homing_retract_dist" section. #RC Usando o do probe
+#probing_retract_dist: 0.8 #default from "stepper_z:homing_retract_dist" section. #RC Usando o do probe
 #   Distance to retract (in mm) before probing the next sample.
 #   The default is homing_retract_dist from the Z rail configuration.
-probing_first_fast: true               # false RC
+#probing_first_fast: true               # false RC
 #   If true, the first probing is done faster by the probing speed.
 #   This is to get faster down and the result is not recorded as a
 #   probing sample. The default is false.
-start_gcode: ATTACH_PROBE
+#start_gcode: ATTACH_PROBE
 #   A list of G-Code commands to execute prior to each calibration command.
 #   See docs/Command_Templates.md for G-Code format. This can be used to
 #   attach the probe.
@@ -82,7 +95,7 @@ start_gcode: ATTACH_PROBE
 #   mag-probe. See docs/Command_Templates.md for G-Code format. This can be
 #   used to attach the probe after probing on the nozzle and before probing
 #   on the mag-probe.
-end_gcode: DOCK_PROBE
+#end_gcode: DOCK_PROBE
 #   A list of G-Code commands to execute after each calibration command.
 #   See docs/Command_Templates.md for G-Code format. This can be used to
 #   detach the probe afterwards.
@@ -90,9 +103,6 @@ end_gcode: DOCK_PROBE
 #####################################################################
 #   Quad Gantry Level
 #####################################################################
-
-#[quad_gantry_level]     #RC Adicionado Klicky
-#horizontal_move_z: 10   #RC Adicionado Klicky
 
 [quad_gantry_level]
 ##  Use QUAD_GANTRY_LEVEL to level a gantry.
@@ -126,16 +136,16 @@ max_adjust: 10
 
 [bed_mesh]
 speed: 300
-horizontal_move_z: 10
+horizontal_move_z: 8
 
 mesh_min: 40, 40
 mesh_max: 260,260
 
 fade_start: 0.6
 fade_end: 10.0
-probe_count: 9,9
+probe_count: 7,7
 algorithm: bicubic
-relative_reference_index: 12
+relative_reference_index: 25
 
 #####################################################################
 #   Probe
@@ -149,18 +159,37 @@ relative_reference_index: 12
 ## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
 #pin: ~!PB7
 ## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
-pin: PG15
+pin: PG13 #PG15 Modificado TAP
 ## For Octopus Pro PROBE port; NPN and PNP proximity switch types can be set by jumper
 #pin: ~!PC5
 
 #--------------------------------------------------------------------
 
 x_offset: 0
-y_offset: 25.0 #19.75             #RC Modificado de "25.0" Klicky
-z_offset: 0 # 6.42              #RC Modificado de "0" Klicky
+y_offset: 0 #25.0 #19.75             #RC Modificado de "25.0" Klicky / Modificado TAP
+#z_offset: 0 # 6.42              #RC Modificado de "0" Klicky
+z_offset: -0.687
 speed: 2 #7                    #RC Modificado de "10.0" Klicky
-samples: 5 #5 #3               #RC Modificado (sugestão diem)
+samples: 4 #5 #3               #RC Modificado (sugestão diem)
 samples_result: median
-sample_retract_dist: 0.8 #3.0 #RC sugestão diem  #2.0    #RC Modificado de "3.0" Klicky
-samples_tolerance:  0.0026 #0.0051 #0.0026 #RC 1 step = 0.00125 sugestão diem: 0.0026 # 0.01     #RC Modificado de "0.006" Klicky
-samples_tolerance_retries: 5 #3 #RC sugestão diem
+sample_retract_dist: 2.0 #0.8 #3.0 #RC sugestão diem  #2.0    #RC Modificado de "3.0" Klicky
+samples_tolerance: 0.0026 # 0.00375 #0.0026 RC 1 step = 0.00125 sugestão diem: 0.0026 # 0.01     #RC Modificado de "0.006" Klicky
+samples_tolerance_retries: 10 #5 #RC sugestão diem
+lift_speed: 20
+#Adicionado pelo TAP:
+activate_gcode:
+    {% set PROBE_TEMP = 150 %}
+    {% set MAX_TEMP = PROBE_TEMP + 5 %}
+    {% set ACTUAL_TEMP = printer.extruder.temperature %}
+    {% set TARGET_TEMP = printer.extruder.target %}
+
+    {% if TARGET_TEMP > PROBE_TEMP %}
+        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+        M109 S{ PROBE_TEMP }
+    {% else %}
+        # Temperature target is already low enough, but nozzle may still be too hot.
+        {% if ACTUAL_TEMP > MAX_TEMP %}
+            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+        {% endif %}
+    {% endif %}
