--- a/Config&Macros/config_steppers.cfg
+++ b/Config&Macros/config_steppers.cfg
@@ -70,7 +70,7 @@ enable_pin: !PG5
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
-endstop_pin: PG10
+endstop_pin: probe:z_virtual_endstop #PG10 Modificado TAP
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
