--- a/Config&Macros/macro_print_start.cfg
+++ b/Config&Macros/macro_print_start.cfg
@@ -2,35 +2,29 @@
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 variable_callback : None
 gcode:
-    {% set speed_min = params.CORNER_VELOCITY|default(4)|float %}
-    {% set speed_max = params.MAX_VELOCITY|default(200)|float %}
-    {% set speed_accel = params.ACCEL|default(500)|int %}
-    {% set speed_deaccel = params.DEACCEL|default(500)|int %}
     {% set force_home_xy = params.FORCE_HOME_XY|default(0)|int %}
     {% set force_qgl = params.FORCE_QGL|default(0)|int %}
     {% set force_bedmesh = params.FORCE_BEDMESH|default(0)|int %}
-    {% set PA = params.PA|default(0.05)|float %}
     {% set HEATSOAK = params.HEATSOAK|default(0.0)|float %}
     {% set PRINTHEAD = params.PRINTHEAD|default(200.0)|float %}
     {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %} # Get bounding box of the first layer
     {% set CALLBACK = params.CALLBACK %}
     
     #Macro Steps Octoprint Plugin
-    RESPOND MSG="$MS clearall"
-    RESPOND MSG="$MS create macroid=1 label=\"Print Start\""
-    RESPOND MSG="$MS addstep macroid=1 step=1 label=\"Heat Soak\""
-    RESPOND MSG="$MS addstep macroid=1 step=2 label=\"Home\""
-    RESPOND MSG="$MS addstep macroid=1 step=3 label=\"Wipe\""
-    RESPOND MSG="$MS addstep macroid=1 step=4 label=\"QGL\""
-    RESPOND MSG="$MS addstep macroid=1 step=5 label=\"Home Z\""
-    RESPOND MSG="$MS addstep macroid=1 step=6 label=\"Wipe\""
-    RESPOND MSG="$MS addstep macroid=1 step=7 label=\"Z offset cal.\""
-    RESPOND MSG="$MS addstep macroid=1 step=8 label=\"Bed level\""
-    RESPOND MSG="$MS addstep macroid=1 step=9 label=\"Home Z\""
+    M118 $MS create macroid=1 label="Print Start"
+    M118 $MS addstep macroid=1 step=1 label="Heat Soak"
+    M118 $MS addstep macroid=1 step=2 label="Home"
+    M118 $MS addstep macroid=1 step=3 label="Wipe"
+    M118 $MS addstep macroid=1 step=4 label="QGL"
+    M118 $MS addstep macroid=1 step=5 label="Home Z"
+    ;M118 $MS addstep macroid=1 step=6 label="Wipe"
+    ;M118 $MS addstep macroid=1 step=7 label="Z offset cal."
+    M118 $MS addstep macroid=1 step=8 label="Bed level"
+    ;M118 $MS addstep macroid=1 step=9 label="Home Z"
     
     SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=callback VALUE="'{CALLBACK}'"
     {% set CONTINUE -%}
-        PRINT_START_CONTINUE CORNER_VELOCITY={speed_min} MAX_VELOCITY={speed_max} ACCEL={speed_accel} DEACCEL={speed_deaccel} FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} PA={PA} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD}
+        PRINT_START_CONTINUE FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD} SIZE={FL_SIZE}
     {%- endset %}
     
     {action_respond_info("Callback:" ~ CALLBACK)}
@@ -40,31 +34,26 @@ gcode:
     {action_respond_info("**************** Preparing to print ****************")}
     M104 S{PRINTHEAD - (0.2 * PRINTHEAD)}
     
-    SET_VELOCITY_LIMIT VELOCITY={speed_max} ACCEL={speed_accel} ACCEL_TO_DECEL={speed_deaccel} SQUARE_CORNER_VELOCITY={speed_min}
     CLEAR_PAUSE    ; Limpa o estado de pause caso a ultima impressao tenha sido finalizada depois de um pause e antes de um resume.
     
     SET_STATUS STATUS="heat_soak"
 
     {% set min_temp = (HEATSOAK/2)-6 | float %}
     {% if min_temp >= printer['temperature_sensor enclosure_temp'].temperature %}
-        RESPOND MSG="$MS nextstep macroid=1"
+        M118 $MS nextstep macroid=1
         HEAT_SOAK HEATER='heater_bed' TARGET={HEATSOAK} SOAKER='temperature_sensor enclosure_temp' RATE=0.1 TIMEOUT=60 MINTEMP={min_temp} CALLBACK='{CONTINUE}'
     {% else %}
         RESPOND MSG="$MS SKIP macroid=1"
         RESPOND TYPE=echo MSG="Skiping heatsoak."
-        PRINT_START_CONTINUE CORNER_VELOCITY={speed_min} MAX_VELOCITY={speed_max} ACCEL={speed_accel} DEACCEL={speed_deaccel} FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} PA={PA} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD} SIZE={FL_SIZE}
+        SET_FAN_SPEED FAN=chamber_fan SPEED=0
+        PRINT_START_CONTINUE FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD} SIZE={FL_SIZE}
     {% endif %}
 
 [gcode_macro PRINT_START_CONTINUE]
 gcode:
-    {% set speed_min = params.CORNER_VELOCITY|default(4)|float %}
-    {% set speed_max = params.MAX_VELOCITY|default(200)|float %}
-    {% set speed_accel = params.ACCEL|default(500)|int %}
-    {% set speed_deaccel = params.DEACCEL|default(500)|int %}
     {% set force_home_xy = params.FORCE_HOME_XY|default(0)|int %}
     {% set force_qgl = params.FORCE_QGL|default(0)|int %}
     {% set force_bedmesh = params.FORCE_BEDMESH|default(0)|int %}
-    {% set PA = params.PA|default(0.05)|float %}
     {% set HEATSOAK = params.HEATSOAK|default(100.0)|float %}
     {% set PRINTHEAD = params.PRINTHEAD|default(200.0)|float %}
     {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %} # Get bounding box of the first layer
@@ -73,56 +62,57 @@ gcode:
     {% set bkp_speed_deaccel = printer.toolhead.max_accel_to_decel|int %}
     {% set bkp_speed_min = printer.toolhead.square_corner_velocity|float %}
     {% set bkp_speed_max = printer.toolhead.max_velocity|float %}
+    SET_VELOCITY_LIMIT VELOCITY=200 ACCEL=500 ACCEL_TO_DECEL=500 SQUARE_CORNER_VELOCITY=4
 
     {% if (force_qgl == 1 or force_home_xy == 1) %}{% set force_calibrate_z = 1 %}{% endif %}
     
     {% if ("xyz" not in printer.toolhead.homed_axes) or (force_home_xy == 1) %}
-      RESPOND MSG="$MS NEXTSTEP macroid=1"
+      M118 $MS nextstep macroid=1
       SET_STATUS STATUS="home"
       G28
-      AVOID_KLICKY Z=10
+      ;AVOID_KLICKY Z=10
     {% else %}
-      RESPOND MSG="$MS SKIP macroid=1"
+      M118 $MS skip macroid=1
     {% endif %}
     
-	{% if printer["gcode_macro _Probe_Variables"].probe_lock or printer["gcode_macro _Probe_Variables"].probe_attached %} ; doca o klicky caso o probe esteja ainda no hotend
-	  RESPOND TYPE=echo MSG="Docking probe."
-	  DOCK_PROBE_UNLOCK
-	{% endif %}
+	;% if printer["gcode_macro _Probe_Variables"].probe_lock or printer["gcode_macro _Probe_Variables"].probe_attached % ; doca o klicky caso o probe esteja ainda no hotend
+	;  RESPOND TYPE=echo MSG="Docking probe."
+	;  DOCK_PROBE_UNLOCK
+	;% endif %
 	
-	RESPOND MSG="$MS NEXTSTEP macroid=1"
+	M118 $MS nextstep macroid=1
     SET_STATUS STATUS="wipe"
     NOZZLE_WIPE
-    AVOID_KLICKY
-    ATTACH_PROBE_LOCK
+    ;AVOID_KLICKY
+    ;ATTACH_PROBE_LOCK
     M106 S255  		; Start fan
     {% if (not printer.quad_gantry_level.applied) or force_qgl == 1 %}
-      RESPOND MSG="$MS NEXTSTEP macroid=1"
+      M118 $MS nextstep macroid=1
       SET_STATUS STATUS="qgl"
       QUAD_GANTRY_LEVEL
-      RESPOND MSG="$MS NEXTSTEP macroid=1"
+      M118 $MS nextstep macroid=1
       SET_STATUS STATUS="home"
       G28 Z
-      RESPOND MSG="$MS NEXTSTEP macroid=1" 
-      SET_STATUS STATUS="wipe" ;o klicky bate no balde
-      DOCK_PROBE_UNLOCK
-      AVOID_KLICKY X=95  
-      NOZZLE_WIPE
-      AVOID_KLICKY X=202
-      M106 S0  		    ; Stop fan
-      RESPOND MSG="$MS NEXTSTEP macroid=1"
-      SET_STATUS STATUS="zoffset"
-      ATTACH_PROBE_LOCK
-      CALIBRATE_Z
-      M106 S255  		; Start fan
+     ; M118 $MS nextstep macroid=1 
+     ; SET_STATUS STATUS="wipe" ;o klicky bate no balde
+     ; DOCK_PROBE_UNLOCK
+     ; AVOID_KLICKY X=95  
+     ; NOZZLE_WIPE
+     ; AVOID_KLICKY X=202
+     ; M106 S0  		    ; Stop fan
+     ; M118 $MS nextstep macroid=1
+     ; SET_STATUS STATUS="zoffset"
+     ; ATTACH_PROBE_LOCK
+     ; CALIBRATE_Z
+     ; M106 S255  		; Start fan
     {% else %}
-      RESPOND MSG="$MS SKIP macroid=1"
-      RESPOND MSG="$MS SKIP macroid=1"
-      RESPOND MSG="$MS SKIP macroid=1"
-      RESPOND MSG="$MS SKIP macroid=1"
+      M118 $MS skip macroid=1
+      M118 $MS skip macroid=1
+      ;M118 $MS skip macroid=1
+      ;M118 $MS skip macroid=1
     {% endif %}
     
-    RESPOND MSG="$MS NEXTSTEP macroid=1"
+    M118 $MS nextstep macroid=1
     SET_STATUS STATUS="bedlevel"
     
     ;LEVEL_BED_ADVANCED MAX_AGE=10 FORCE={force_bedmesh} ; Force probe mesh
@@ -131,12 +121,11 @@ gcode:
     
     RESPOND TYPE=echo MSG="Docking probe."
     DOCK_PROBE_UNLOCK
-    RESPOND MSG="$MS NEXTSTEP macroid=1"
+    M118 $MS nextstep macroid=1
     M106 S0  		; Stop fan
     SET_VELOCITY_LIMIT VELOCITY={bkp_speed_max} ACCEL={bkp_speed_accel} ACCEL_TO_DECEL={bkp_speed_deaccel} SQUARE_CORNER_VELOCITY={bkp_speed_min}
     SAVE_GCODE_STATE NAME=printer_init
-    RESPOND MSG="$MS NEXTSTEP macroid=1"
-    SET_PRESSURE_ADVANCE ADVANCE={PA}
+    M118 $MS nextstep macroid=1
     M109 S{PRINTHEAD}
     FAST_NOZZLE_WIPE
     SET_STATUS STATUS="printing"    
