--- a/Config&Macros/config_display.cfg
+++ b/Config&Macros/config_display.cfg
@@ -22,24 +22,6 @@ aliases:
 #   Displays
 #####################################################################
 
-##  Uncomment the display that you have
-#--------------------------------------------------------------------
-
-#[display]
-##  RepRapDiscount 128x64 Full Graphic Smart Controller
-#lcd_type: st7920
-#cs_pin: EXP1_4
-#sclk_pin: EXP1_5
-#sid_pin: EXP1_3
-#menu_timeout: 40
-#encoder_pins: ^EXP2_5, ^EXP2_3
-#click_pin: ^!EXP1_2
-
-#[output_pin beeper]
-#pin: EXP1_1
-
-#--------------------------------------------------------------------
-
 [display]                        #RC Descomentado
 ##  mini12864 LCD Display
 lcd_type: uc1701                 #RC Descomentado
@@ -96,6 +78,24 @@ gcode:
 [menu __main __user]
 type: list
 name: User
+
+[menu __main __user __userheat]
+type:command
+name: Manual Heat
+gcode:
+    Manual_Heat
+    
+[menu __main __user __userfront]
+type:command
+name: Move to Front
+gcode:
+    Front
+
+[menu __main __user __userback]
+type:command
+name: Move to back
+gcode:
+    Back
 
 [menu __main __user __userfilchange]
 type:command
