--- a/Config&Macros/config_extruder.cfg
+++ b/Config&Macros/config_extruder.cfg
@@ -31,7 +31,10 @@ min_temp: 10
 max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
-max_extrude_only_distance: 110.0
+## modificados para o teste do CNC kitchen
+max_extrude_only_distance: 110 #teste do CNC kitchen
+# max_extrude_cross_section: 5 #Habilitar para o teste do CNC kitchen
+
 #control = pid
 #pid_kp = 26.213
 #pid_ki = 1.304
