--- a/Config&Macros/config_probe.cfg
+++ b/Config&Macros/config_probe.cfg
@@ -9,7 +9,7 @@ timeout: 1800
 home_xy_position: 150,150
 #   A X, Y coordinate (e.g. 100, 100) where the Z homing should be
 #   performed. This parameter must be provided.
-speed: 300.0
+speed: 450.0
 #   Speed at which the toolhead is moved to the safe Z home
 #   coordinate. The default is 50 mm/s
 z_hop: 5
@@ -117,12 +117,12 @@ gantry_corners:          ##RC Descomentado
 ##  Probe points
 points:                  ##RC Descomentado
    50,25                 #RC Descomentado
-   50,225                #RC Descomentado
-   250,225               #RC Descomentado
+   50,275                #RC Descomentado
+   250,275               #RC Descomentado
    250,25                #RC Descomentado
 
 #--------------------------------------------------------------------
-speed: 300
+speed: 450
 horizontal_move_z: 10
 retries: 5
 retry_tolerance: 0.0076 #0.0051 #0.0075 #RC Sugestão do Diem
@@ -135,17 +135,17 @@ max_adjust: 10
 #horizontal_move_z: 10   #RC Adicionado Klicky
 
 [bed_mesh]
-speed: 300
-horizontal_move_z: 8
+speed: 450
+horizontal_move_z: 5
 
 mesh_min: 40, 40
 mesh_max: 260,260
 
 fade_start: 0.6
 fade_end: 10.0
-probe_count: 7,7
+probe_count: 5,5
 algorithm: bicubic
-relative_reference_index: 25
+relative_reference_index: 3
 
 #####################################################################
 #   Probe
@@ -168,7 +168,11 @@ pin: PG13 #PG15 Modificado TAP
 x_offset: 0
 y_offset: 0 #25.0 #19.75             #RC Modificado de "25.0" Klicky / Modificado TAP
 #z_offset: 0 # 6.42              #RC Modificado de "0" Klicky
-z_offset: -0.687
+z_offset: -0.683 #-0.703 # -0.687 #-0.637
+#   The distance (in mm) between the bed and the nozzle when the probe
+#   triggers. This parameter must be provided.
+#   Quanto mais negativo mais afastado da mesa o nozzle vai ficar
+
 speed: 2 #7                    #RC Modificado de "10.0" Klicky
 samples: 4 #5 #3               #RC Modificado (sugestão diem)
 samples_result: median
