--- a/Config&Macros/config_steppers.cfg
+++ b/Config&Macros/config_steppers.cfg
@@ -25,9 +25,17 @@ homing_positive_dir: true
 [tmc2209 stepper_x]
 uart_pin: PC4
 interpolate: false
-run_current: 1.1 #0.8 RC alerado conforme data sheet do motor ((2A / 1,4142) * 0,8)
+# run_current: 1.1 #0.8 RC alerado conforme data sheet do motor ((2A / 1,4142) * 0,8)
+
+#https://github.com/MakerBogans/docs/wiki/TMC-Driver-Tuning
+#OMC 17hs19-2004s1
 sense_resistor: 0.110
 stealthchop_threshold: 0
+run_current: 1 #0.976
+driver_TBL: 1
+driver_TOFF: 3
+driver_HSTRT: 0
+driver_HEND: 3
 
 ##  A Stepper - Right
 ##  Connected to MOTOR_1
@@ -52,9 +60,17 @@ homing_positive_dir: true
 [tmc2209 stepper_y]
 uart_pin: PD11
 interpolate: false
-run_current: 1.1 #0.8 RC alerado conforme data sheet do motor ((2A / 1,4142) * 0,8)
+#run_current: 1.1 #0.8 RC alerado conforme data sheet do motor ((2A / 1,4142) * 0,8)
+
+#https://github.com/MakerBogans/docs/wiki/TMC-Driver-Tuning
+#OMC 17hs19-2004s1
 sense_resistor: 0.110
 stealthchop_threshold: 0
+run_current: 1 #0.976
+driver_TBL: 1
+driver_TOFF: 3
+driver_HSTRT: 0
+driver_HEND: 3
  
 #####################################################################
 #   Z Stepper Settings
