--- a/Config&Macros/klipper/klippy/extras/display/menu.cfg
+++ b/Config&Macros/klipper/klippy/extras/display/menu.cfg
@@ -24,6 +24,9 @@
 #       + Home All
 #       + Home Z
 #       + Home X/Y
+#       + Z Tilt
+#       + Quad Gantry Lvl
+#       + Bed Mesh
 #       + Steppers off
 #       + Fan: OFF
 #       + Fan speed: 000%
@@ -232,6 +235,24 @@ type: command
 enable: {not printer.idle_timeout.state == "Printing"}
 name: Home X/Y
 gcode: G28 X Y
+
+[menu __main __control __z_tilt]
+type: command
+enable: {not printer.idle_timeout.state == "Printing" and ('z_tilt' in printer)}
+name: Z Tilt
+gcode: Z_TILT_ADJUST
+
+[menu __main __control __quad_gantry_level]
+type: command
+enable: {not printer.idle_timeout.state == "Printing" and ('quad_gantry_level' in printer)}
+name: Quad Gantry Lvl
+gcode: QUAD_GANTRY_LEVEL
+
+[menu __main __control __bed_mesh]
+type: command
+enable: {not printer.idle_timeout.state == "Printing" and ('bed_mesh' in printer)}
+name: Bed Mesh
+gcode: BED_MESH_CALIBRATE
 
 [menu __main __control __disable]
 type: command
@@ -532,7 +553,7 @@ type: command
 enable: {('extruder' in printer) and ('heater_bed' in printer)}
 name: Preheat all
 gcode:
-    M140 S100
+    M140 S110
     M104 S245
 
 [menu __main __temp __preheat_abs __hotend]
@@ -545,7 +566,7 @@ gcode: M104 S245
 type: command
 enable: {'heater_bed' in printer}
 name: Preheat hotbed
-gcode: M140 S100
+gcode: M140 S110
 
 [menu __main __temp __cooldown]
 type: list
@@ -593,7 +614,7 @@ name: Load Fil. fast
 gcode:
     SAVE_GCODE_STATE NAME=__filament__load
     M83
-    G1 E60 F960
+    G1 E50 F960
     RESTORE_GCODE_STATE NAME=__filament__load
 
 [menu __main __filament __loads]
@@ -602,7 +623,7 @@ name: Load Fil. slow
 gcode:
     SAVE_GCODE_STATE NAME=__filament__load
     M83
-    G1 E60 F240
+    G1 E50 F240
     RESTORE_GCODE_STATE NAME=__filament__load
 
 [menu __main __filament __unloadf]
@@ -611,7 +632,7 @@ name: Unload Fil.fast
 gcode:
     SAVE_GCODE_STATE NAME=__filament__load
     M83
-    G1 E-60 F960
+    G1 E-50 F960
     RESTORE_GCODE_STATE NAME=__filament__load
 
 [menu __main __filament __unloads]
@@ -620,7 +641,7 @@ name: Unload Fil.slow
 gcode:
     SAVE_GCODE_STATE NAME=__filament__load
     M83
-    G1 E-60 F240
+    G1 E-50 F240
     RESTORE_GCODE_STATE NAME=__filament__load
 
 [menu __main __filament __feed]
@@ -683,7 +704,7 @@ name: Calibration
 
 [menu __main __setup __calib __delta_calib_auto]
 type: command
-enable: {not printer.idle_timeout.state == "Printing"}
+enable: {(not printer.idle_timeout.state == "Printing") and ('delta_calibrate' in printer)}
 name: Delta cal. auto
 gcode:
     G28
@@ -691,12 +712,12 @@ gcode:
 
 [menu __main __setup __calib __delta_calib_man]
 type: list
-enable: {not printer.idle_timeout.state == "Printing"}
+enable: {(not printer.idle_timeout.state == "Printing") and ('delta_calibrate' in printer)}
 name: Delta cal. man
 
 [menu __main __setup __calib __bedprobe]
 type: command
-enable: {not printer.idle_timeout.state == "Printing"}
+enable: {(not printer.idle_timeout.state == "Printing") and ('probe' in printer)}
 name: Bed probe
 gcode: PROBE
 
