--- a/Config&Macros/macro_print_start.cfg
+++ b/Config&Macros/macro_print_start.cfg
@@ -35,13 +35,14 @@ gcode:
     M104 S{PRINTHEAD - (0.2 * PRINTHEAD)}
     
     CLEAR_PAUSE    ; Limpa o estado de pause caso a ultima impressao tenha sido finalizada depois de um pause e antes de um resume.
+    BED_MESH_CLEAR
     
     SET_STATUS STATUS="heat_soak"
 
     {% set min_temp = (HEATSOAK/2)-6 | float %}
     {% if min_temp >= printer['temperature_sensor enclosure_temp'].temperature %}
         M118 $MS nextstep macroid=1
-        HEAT_SOAK HEATER='heater_bed' TARGET={HEATSOAK} SOAKER='temperature_sensor enclosure_temp' RATE=0.1 TIMEOUT=60 MINTEMP={min_temp} CALLBACK='{CONTINUE}'
+        HEAT_SOAK HEATER='heater_bed' TARGET={HEATSOAK} SOAKER='temperature_sensor enclosure_temp' RATE=0.2 TIMEOUT=60 MINTEMP={min_temp} CALLBACK='{CONTINUE}'
     {% else %}
         RESPOND MSG="$MS SKIP macroid=1"
         RESPOND TYPE=echo MSG="Skiping heatsoak."
@@ -62,7 +63,7 @@ gcode:
     {% set bkp_speed_deaccel = printer.toolhead.max_accel_to_decel|int %}
     {% set bkp_speed_min = printer.toolhead.square_corner_velocity|float %}
     {% set bkp_speed_max = printer.toolhead.max_velocity|float %}
-    SET_VELOCITY_LIMIT VELOCITY=200 ACCEL=500 ACCEL_TO_DECEL=500 SQUARE_CORNER_VELOCITY=4
+    SET_VELOCITY_LIMIT VELOCITY=450 ACCEL=500 ACCEL_TO_DECEL=500 SQUARE_CORNER_VELOCITY=4
 
     {% if (force_qgl == 1 or force_home_xy == 1) %}{% set force_calibrate_z = 1 %}{% endif %}
     
@@ -120,7 +121,7 @@ gcode:
     ADAPTIVE_BED_MESH
     
     RESPOND TYPE=echo MSG="Docking probe."
-    DOCK_PROBE_UNLOCK
+    ;DOCK_PROBE_UNLOCK
     M118 $MS nextstep macroid=1
     M106 S0  		; Stop fan
     SET_VELOCITY_LIMIT VELOCITY={bkp_speed_max} ACCEL={bkp_speed_accel} ACCEL_TO_DECEL={bkp_speed_deaccel} SQUARE_CORNER_VELOCITY={bkp_speed_min}
