--- a/Config&Macros/printer.cfg
+++ b/Config&Macros/printer.cfg
@@ -131,6 +131,11 @@ path: ~/printer_data/gcodes
 # Advanced Bed Mesh (Nao usada mais)
 #[include macro_level_bed_adv.cfg]
 
+
+# Speed test
+# https://ellis3dp.com/Print-Tuning-Guide/articles/determining_max_speeds_accels.html
+[include macro_speed_test.cfg]
+
 #####################################################################
 #   Macros Simples
 #####################################################################
@@ -143,7 +148,8 @@ gcode:
     {% set max = params.MAX|default(80)|int %}
     {% set axis = params.AXIS|default("y")|string %}
 
-    TEST_RESONANCES AXIS={axis} FREQ_START={min} FREQ_END={max} HZ_PER_SEC=0.5
+    BED_MESH_CLEAR
+    TEST_RESONANCES AXIS={axis} FREQ_START={min} FREQ_END={max} HZ_PER_SEC=0.2
     M400
 
     {% if verbose %}
@@ -158,6 +164,7 @@ gcode:
     {% set DUR = params.DUR|default(10)|int %}
     {% set AXIS = params.AXIS|default("y")|string %}
 
+    BED_MESH_CLEAR
     TEST_RESONANCES OUTPUT=raw_data AXIS={AXIS} FREQ_START={FREQ-1} FREQ_END={FREQ+1} HZ_PER_SEC={1/(DUR/3)}
     M400
 
@@ -196,7 +203,15 @@ gcode:
       G28
     {% endif %}
     G90
-    G0 X{ printer.toolhead.axis_maximum.x*2/3 } Y0 Z80 F7200
+    G0 X205 Y0 Z80 F7200 #{ printer.toolhead.axis_maximum.x*2/3 } - fixei a posição para pegar o ponto do ref_index do mesh
+
+[gcode_macro back]
+gcode:
+    {% if ("xyz" not in printer.toolhead.homed_axes) %}
+      G28
+    {% endif %}
+    G90
+    G0 X205 Y297 Z80 F7200 #{ printer.toolhead.axis_maximum.x*2/3 } - fixei a posição para pegar o ponto do ref_index do mesh
 
 [gcode_macro HOMED]
 gcode:
@@ -211,29 +226,73 @@ gcode:
     M300 S850 P400
     M300 S1020 P300
     M300 S850 P400
+    
+[gcode_macro FORCEZ]
+gcode:
+    {% set Z = params.Z|default(10)|int %}
+    {% if (Z > 20) %}
+        {% set Z = 20 %}
+        M118 To high height. Forced to 20mm
+    {% endif %}
+    {% if ("xyz" not in printer.toolhead.homed_axes) %}
+        {% for i in range(1, Z) %}
+            FORCE_MOVE STEPPER=stepper_z1 DISTANCE=1 VELOCITY=10
+            FORCE_MOVE STEPPER=stepper_z2 DISTANCE=1 VELOCITY=10
+        {% endfor %}
+    {% else %}
+        M118 Already hommed, aborting.
+    {% endif %}
+    
+[gcode_macro FORCEZALL]
+gcode:
+    {% set Z = params.Z|default(10)|int %}
+    {% if (Z > 20) %}
+        {% set Z = 20 %}
+        M118 To high height. Forced to 20mm
+    {% endif %}
+    {% if ("xyz" not in printer.toolhead.homed_axes) %}
+        {% for i in range(1, Z) %}
+            FORCE_MOVE STEPPER=stepper_z1 DISTANCE=1 VELOCITY=10
+            FORCE_MOVE STEPPER=stepper_z2 DISTANCE=1 VELOCITY=10
+            FORCE_MOVE STEPPER=stepper_z3 DISTANCE=1 VELOCITY=10
+            FORCE_MOVE STEPPER=stepper_z DISTANCE=1 VELOCITY=10
+        {% endfor %}
+    {% else %}
+        M118 Already hommed, aborting.
+    {% endif %}
+    
+[gcode_macro PARK]
+# Params
+## X
+## Y
+## Z
+variable_pos_x: 150
+variable_pos_y: 0
+variable_pos_z: 50
+variable_spd_xy: 6000
+variable_spd_z: 1500
+
+gcode:
+    SAVE_GCODE_STATE NAME=park
+    G90                            ; absolute positioning
+    {% set Rz = printer.configfile.config["stepper_z"]["position_max"]|float %}
+    {% set z = printer.gcode_move.gcode_position.z|float %}
+    {% if (z + pos_z|float) < printer.configfile.config["stepper_z"]["position_max"]|float %}
+       G1 Z{([Rz,z + pos_z|float]|sort)[0]} F{spd_z}
+       G1 X{params.X|default(pos_x)|float} Y{params.Y|default(pos_y)|float} F{spd_xy}  
+    {% endif %}
+    RESTORE_GCODE_STATE NAME=park
+
+[gcode_macro MANUAL_HEAT]
+gcode:
+    M140 S100
+    M104 S150
+    SET_FAN_SPEED FAN=chamber_fan SPEED=1
 
 #####################################################################
 #   Playground
 #####################################################################
 
-[gcode_macro TESTEMS]
-gcode:
-    RESPOND MSG="$MS clearall"
-    RESPOND MSG="$MS create macroid=1 label=\"Print Start\""
-    RESPOND MSG="$MS addstep macroid=1 step=1 label=\"Heat Soak\""
-    RESPOND MSG="$MS addstep macroid=1 step=2 label=\"Home\""
-    RESPOND MSG="$MS addstep macroid=1 step=3 label=\"Wipe\""
-    RESPOND MSG="$MS addstep macroid=1 step=4 label=\"QGL\""
-
-[gcode_macro TESTEMS2]
-gcode:    
-    M117 $MS clearall
-    M117 $MS create macroid=1 label="Print Start"
-    M117 $MS addstep macroid=1 step=5 label="Home Z"
-    M117 $MS addstep macroid=1 step=6 label="Wipe"
-    M117 $MS addstep macroid=1 step=7 label="Z offset cal."
-    M117 $MS addstep macroid=1 step=8 label="Bed level"
-    M117 $MS addstep macroid=1 step=9 label="Home Z"
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
