--- a/Config&Macros/macro_print_end.cfg
+++ b/Config&Macros/macro_print_end.cfg
@@ -17,13 +17,13 @@ gcode:
     
     G90                                      ; absolute positioning
     G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
-    G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
+    G0 X{th.axis_maximum.x//2} Y3 F3600  ; park nozzle at front {th.axis_maximum.y - 2}
     {% if z_safe < 50 %}
     G0 Z50
     {% endif %}
     M107                                     ; turn off fan
     
-    #BED_MESH_CLEAR
+    BED_MESH_CLEAR
     #SAVE_IF_SET     ; SAVE_CONFIG if a mesh was probed in START_PRINT
     SET_STATUS STATUS="finished" 
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
