--- a/Config&Macros/config_mcu.cfg
+++ b/Config&Macros/config_mcu.cfg
@@ -10,3 +10,13 @@ serial: /tmp/klipper_host_mcu
 
 [printer]
 buffer_time_high: 10    #https://github.com/Klipper3d/klipper/issues/2629 tentativa de reduzir as paradas
+
+[temperature_sensor raspberry_pi]
+sensor_type: temperature_host
+min_temp: 10
+max_temp: 100
+
+[temperature_sensor mcu_temp]
+sensor_type: temperature_mcu
+min_temp: 0
+max_temp: 100 
