--- a/Config&Macros/config_probe.cfg
+++ b/Config&Macros/config_probe.cfg
@@ -159,7 +159,7 @@ relative_reference_index: 3
 ## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
 #pin: ~!PB7
 ## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
-pin: PG13 #PG15 Modificado TAP
+pin: ^PG13 #PG15 Modificado TAP
 ## For Octopus Pro PROBE port; NPN and PNP proximity switch types can be set by jumper
 #pin: ~!PC5
 
@@ -168,7 +168,7 @@ pin: PG13 #PG15 Modificado TAP
 x_offset: 0
 y_offset: 0 #25.0 #19.75             #RC Modificado de "25.0" Klicky / Modificado TAP
 #z_offset: 0 # 6.42              #RC Modificado de "0" Klicky
-z_offset: -0.683 #-0.703 # -0.687 #-0.637
+z_offset: -0.323 #-0.803 #-0.683 #-0.703 # -0.687 #-0.637
 #   The distance (in mm) between the bed and the nozzle when the probe
 #   triggers. This parameter must be provided.
 #   Quanto mais negativo mais afastado da mesa o nozzle vai ficar
