--- a/Config&Macros/config_steppers.cfg
+++ b/Config&Macros/config_steppers.cfg
@@ -7,7 +7,7 @@
 ##  Endstop connected to DIAG_0
 [stepper_x]
 step_pin: PF13
-dir_pin: PF12  #RC Invertido
+dir_pin: !PF12  #RC Invertido
 enable_pin: !PF14
 rotation_distance: 40
 microsteps: 32
@@ -31,18 +31,18 @@ interpolate: false
 #OMC 17hs19-2004s1
 sense_resistor: 0.110
 stealthchop_threshold: 0
-run_current: 1 #0.976
-driver_TBL: 1
-driver_TOFF: 3
-driver_HSTRT: 0
-driver_HEND: 3
+run_current: 1.2  #1.4 #0.976
+#driver_TBL: 1
+#driver_TOFF: 3
+#driver_HSTRT: 0
+#driver_HEND: 3
 
 ##  A Stepper - Right
 ##  Connected to MOTOR_1
 ##  Endstop connected to DIAG_1
 [stepper_y]
 step_pin: PG0
-dir_pin: PG1   #RC Invertido
+dir_pin: !PG1   #RC Invertido
 enable_pin: !PF15
 rotation_distance: 40
 microsteps: 32
@@ -66,11 +66,11 @@ interpolate: false
 #OMC 17hs19-2004s1
 sense_resistor: 0.110
 stealthchop_threshold: 0
-run_current: 1 #0.976
-driver_TBL: 1
-driver_TOFF: 3
-driver_HSTRT: 0
-driver_HEND: 3
+run_current: 1.2 #1.4 #0.976
+#driver_TBL: 1
+#driver_TOFF: 3
+#driver_HSTRT: 0
+#driver_HEND: 3
  
 #####################################################################
 #   Z Stepper Settings
