--- a/Config&Macros/macro_print_start.cfg
+++ b/Config&Macros/macro_print_start.cfg
@@ -5,6 +5,8 @@ gcode:
     {% set force_home_xy = params.FORCE_HOME_XY|default(0)|int %}
     {% set force_qgl = params.FORCE_QGL|default(0)|int %}
     {% set force_bedmesh = params.FORCE_BEDMESH|default(0)|int %}
+    {% set NO_BEDMESH = params.NO_BEDMESH|default(0)|int %}
+    {% set PRIME_NOZZLE = params.PRIME_NOZZLE|default(0)|int %}
     {% set HEATSOAK = params.HEATSOAK|default(0.0)|float %}
     {% set PRINTHEAD = params.PRINTHEAD|default(200.0)|float %}
     {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %} # Get bounding box of the first layer
@@ -17,14 +19,11 @@ gcode:
     M118 $MS addstep macroid=1 step=3 label="Wipe"
     M118 $MS addstep macroid=1 step=4 label="QGL"
     M118 $MS addstep macroid=1 step=5 label="Home Z"
-    ;M118 $MS addstep macroid=1 step=6 label="Wipe"
-    ;M118 $MS addstep macroid=1 step=7 label="Z offset cal."
     M118 $MS addstep macroid=1 step=8 label="Bed level"
-    ;M118 $MS addstep macroid=1 step=9 label="Home Z"
-    
+
     SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=callback VALUE="'{CALLBACK}'"
     {% set CONTINUE -%}
-        PRINT_START_CONTINUE FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD} SIZE={FL_SIZE}
+        PRINT_START_CONTINUE FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD} SIZE={FL_SIZE} NO_BEDMESH={NO_BEDMESH} PRIME_NOZZLE={PRIME_NOZZLE}
     {%- endset %}
     
     {action_respond_info("Callback:" ~ CALLBACK)}
@@ -32,10 +31,13 @@ gcode:
     
     M117 Preparing to print
     {action_respond_info("**************** Preparing to print ****************")}
-    M104 S{PRINTHEAD - (0.2 * PRINTHEAD)}
+    M109 S{PRINTHEAD - (0.2 * PRINTHEAD)}
     
     CLEAR_PAUSE    ; Limpa o estado de pause caso a ultima impressao tenha sido finalizada depois de um pause e antes de um resume.
-    BED_MESH_CLEAR
+    
+    {% if NO_BEDMESH == 0 %}
+        BED_MESH_CLEAR
+    {% endif %}
     
     SET_STATUS STATUS="heat_soak"
 
@@ -47,7 +49,7 @@ gcode:
         RESPOND MSG="$MS SKIP macroid=1"
         RESPOND TYPE=echo MSG="Skiping heatsoak."
         SET_FAN_SPEED FAN=chamber_fan SPEED=0
-        PRINT_START_CONTINUE FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD} SIZE={FL_SIZE}
+        PRINT_START_CONTINUE FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD} SIZE={FL_SIZE} NO_BEDMESH={NO_BEDMESH} PRIME_NOZZLE={PRIME_NOZZLE}
     {% endif %}
 
 [gcode_macro PRINT_START_CONTINUE]
@@ -55,6 +57,8 @@ gcode:
     {% set force_home_xy = params.FORCE_HOME_XY|default(0)|int %}
     {% set force_qgl = params.FORCE_QGL|default(0)|int %}
     {% set force_bedmesh = params.FORCE_BEDMESH|default(0)|int %}
+    {% set NO_BEDMESH = params.NO_BEDMESH|default(0)|int %}
+    {% set PRIME_NOZZLE = params.PRIME_NOZZLE|default(0)|int %}
     {% set HEATSOAK = params.HEATSOAK|default(100.0)|float %}
     {% set PRINTHEAD = params.PRINTHEAD|default(200.0)|float %}
     {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %} # Get bounding box of the first layer
@@ -71,21 +75,14 @@ gcode:
       M118 $MS nextstep macroid=1
       SET_STATUS STATUS="home"
       G28
-      ;AVOID_KLICKY Z=10
     {% else %}
       M118 $MS skip macroid=1
     {% endif %}
     
-	;% if printer["gcode_macro _Probe_Variables"].probe_lock or printer["gcode_macro _Probe_Variables"].probe_attached % ; doca o klicky caso o probe esteja ainda no hotend
-	;  RESPOND TYPE=echo MSG="Docking probe."
-	;  DOCK_PROBE_UNLOCK
-	;% endif %
-	
+
 	M118 $MS nextstep macroid=1
     SET_STATUS STATUS="wipe"
     NOZZLE_WIPE
-    ;AVOID_KLICKY
-    ;ATTACH_PROBE_LOCK
     M106 S255  		; Start fan
     {% if (not printer.quad_gantry_level.applied) or force_qgl == 1 %}
       M118 $MS nextstep macroid=1
@@ -94,34 +91,21 @@ gcode:
       M118 $MS nextstep macroid=1
       SET_STATUS STATUS="home"
       G28 Z
-     ; M118 $MS nextstep macroid=1 
-     ; SET_STATUS STATUS="wipe" ;o klicky bate no balde
-     ; DOCK_PROBE_UNLOCK
-     ; AVOID_KLICKY X=95  
-     ; NOZZLE_WIPE
-     ; AVOID_KLICKY X=202
-     ; M106 S0  		    ; Stop fan
-     ; M118 $MS nextstep macroid=1
-     ; SET_STATUS STATUS="zoffset"
-     ; ATTACH_PROBE_LOCK
-     ; CALIBRATE_Z
-     ; M106 S255  		; Start fan
     {% else %}
       M118 $MS skip macroid=1
       M118 $MS skip macroid=1
-      ;M118 $MS skip macroid=1
-      ;M118 $MS skip macroid=1
     {% endif %}
     
-    M118 $MS nextstep macroid=1
-    SET_STATUS STATUS="bedlevel"
+    {% if NO_BEDMESH == 0 %}
+        M118 $MS nextstep macroid=1
+        SET_STATUS STATUS="bedlevel"
+        ;LEVEL_BED_ADVANCED MAX_AGE=10 FORCE={force_bedmesh} ; Force probe mesh
+        COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
+        ADAPTIVE_BED_MESH
+    {% else %}
+        M118 $MS skip macroid=1
+    {% endif %}
     
-    ;LEVEL_BED_ADVANCED MAX_AGE=10 FORCE={force_bedmesh} ; Force probe mesh
-    COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
-    ADAPTIVE_BED_MESH
-    
-    RESPOND TYPE=echo MSG="Docking probe."
-    ;DOCK_PROBE_UNLOCK
     M118 $MS nextstep macroid=1
     M106 S0  		; Stop fan
     SET_VELOCITY_LIMIT VELOCITY={bkp_speed_max} ACCEL={bkp_speed_accel} ACCEL_TO_DECEL={bkp_speed_deaccel} SQUARE_CORNER_VELOCITY={bkp_speed_min}
@@ -129,5 +113,8 @@ gcode:
     M118 $MS nextstep macroid=1
     M109 S{PRINTHEAD}
     FAST_NOZZLE_WIPE
-    SET_STATUS STATUS="printing"    
+    SET_STATUS STATUS="printing"
+    {% if PRIME_NOZZLE == 1 %}
+        PRIME_NOZZLE
+    {% endif %}
     RESTORE_GCODE_STATE NAME=printer_init
