--- a/Config&Macros/macro_purge_fil.cfg
+++ b/Config&Macros/macro_purge_fil.cfg
@@ -1,24 +1,28 @@
 [gcode_macro PURGE_FILLAMENT]
 gcode:
     M117 Purge Fillament MACRO
+    STATUS_CLEANING
     {% if printer.extruder.temperature < printer.configfile.config.extruder.min_extrude_temp|float %}
         RESPOND TYPE=error MSG="{ "Purge Filament Macro Error: Cold Hot End (actual temperature: " + printer.extruder.temperature|string + " < minimum temperature:" + printer.configfile.config.extruder.min_extrude_temp + ")." }"
         M117 Cold Hot End
     {% else %}
         {% if ("xyz" not in printer.toolhead.homed_axes) or (force_home_xy == 1) %}
+          {% set SAVETEMP = printer.extruder.target %}
           G28
-          G90
-          G0 Y250 Z5 F5000 ; Avoid  klicky
+          M109 S{SAVETEMP}
         {% endif %}
-        G90
-        G0 X40 Y301 Z5 F5000 #Purge bucket position
-        G91
-        G1 E50 F300
-        G90
-        CLEAN_NOZZLE
-        G0 X40 Y301 Z5 F5000 #Purge bucket position
-        G91
-        G1 E50 F300
-        G90
-        CLEAN_NOZZLE
+        ;G90                 ; Absolute coordinates.
+        ;M83                 ; Relative extruder mode.
+        ;{% set random_x = (range(10, 40) | random) %}
+        ;G0 X{random_x} Y303 Z5 F5000 #Purge bucket position
+        ;G91
+        ;G1 E50 F300
+        ;G90
+        CLEAN_NOZZLE bucket_pos=1
+        ;{% set random_x = (range(10, 40) | random) %}
+        ;G0 X{random_x} Y303 Z5 F5000 #Purge bucket position
+        ;G91
+        ;G1 E50 F300
+        ;G90
+        ;CLEAN_NOZZLE bucket_pos=1
     {% endif %} 
