--- a/Config&Macros/macro_wipe_nozzle.cfg
+++ b/Config&Macros/macro_wipe_nozzle.cfg
@@ -2,26 +2,26 @@
 [gcode_macro NOZZLE_WIPE]
 gcode:
     M117 Wiping Nozzle MACRO
-    G1 X95 Y300 F4000           ; move above wiper pad
+    STATUS_CLEANING
+    G1 X95 Y303 F4000           ; move above wiper pad
     G1 Z2.5                     ; push nozzle into wiper
-    G1 X55 Y300 F2000           ; slow wipe
-    G1 X95 Y300 F2000           ; slow wipe
-    G1 X95 Y298.5 F2000         ; move 1.5mm
-    G1 X55 Y298.5 F2000         ; slow wipe
-    G1 X95 Y298.5 F2000         ; slow wipe
-    G1 X55 Y300 F2000           ; slow wipe
-    G1 X55 Y298.5 F2000         ; slow wipe
-    G1 X95 Y300 F2000           ; slow wipe
+    {% for wipes in range(1, 8) %}
+        G1 X55 Y303 F7000           ; slow wipe
+        G1 X55 Y301 F7000           ; slow wipe
+        G1 X95 Y301 F7000              ; move 2mm
+        G1 X95 Y303 F7000           ; slow wipe
+    {% endfor %}
     G1 Z10                      ; raise extruder
     
 #   Wipe the nozzle
 [gcode_macro FAST_NOZZLE_WIPE]
 gcode:
     M117 Wiping Nozzle MACRO
-    G1 X95 Y300 F4000           ; move above wiper pad
+    STATUS_CLEANING
+    G1 X95 Y303 F7000           ; move above wiper pad
     G1 Z2.5                     ; push nozzle into wiper
-    G1 X55 Y300 F2000           ; slow wipe
-    G1 X95 Y298.5 F2000         ; move 1.5mm
-    G1 X55 Y300 F2000
+    {% for wipes in range(1, 4) %}
+        G1 X55 Y303 F7000           ; slow wipe
+        G1 X95 Y301 F7000              ; move 2mm
+    {% endfor %}
     G1 Z10                      ; raise extruder
-    G1 X150 Y150 F4000
