--- a/Config&Macros/printer.cfg
+++ b/Config&Macros/printer.cfg
@@ -99,6 +99,8 @@ path: ~/printer_data/gcodes
 
 [include macro_sbleds.cfg]
 
+[include macro_prime_nozle.cfg]
+
 #####################################################################
 #   Macros especiais de terceiros
 #####################################################################
@@ -288,6 +290,28 @@ gcode:
     M140 S100
     M104 S150
     SET_FAN_SPEED FAN=chamber_fan SPEED=1
+    
+[gcode_macro DUMP_VARIABLES]
+gcode:
+    {% set filter_name = params.NAME|default('')|string|lower %}
+    {% set filter_value = params.VALUE|default('')|string|lower %}
+    {% set show_cfg = params.SHOW_CFG|default(0)|int %}
+    
+    {% set out = [] %}
+
+    {% for key1 in printer %}
+        {% for key2 in printer[key1] %}
+            {% if (show_cfg or not (key1|lower == 'configfile' and key2|lower in ['config', 'settings'])) and (filter_name in key1|lower or filter_name in key2|lower) and filter_value in printer[key1][key2]|string|lower %}
+                {% set dummy = out.append("printer['%s'].%s = %s" % (key1, key2, printer[key1][key2])) %}
+            {% endif %}
+        {% else %}
+            {% if filter_name in key1|lower and filter_value in printer[key1]|string|lower %}
+                {% set dummy = out.append("printer['%s'] = %s" % (key1, printer[key1])) %}
+            {% endif %}
+        {% endfor %}
+    {% endfor %}
+    
+    {action_respond_info(out|join("\n"))}
 
 #####################################################################
 #   Playground
