--- a/Config&Macros/config_display.cfg
+++ b/Config&Macros/config_display.cfg
@@ -75,16 +75,17 @@ name: Turn off Octopi
 gcode:
     {action_respond_info('action:poweroff')}
 
+[menu __main __temp __heatsoak]
+type: command
+enable: {('extruder' in printer) and ('heater_bed' in printer)}
+name: Heat Soak
+gcode:
+    MANUAL_HEAT
+
 [menu __main __user]
 type: list
 name: User
 
-[menu __main __user __userheat]
-type:command
-name: Manual Heat
-gcode:
-    Manual_Heat
-    
 [menu __main __user __userfront]
 type:command
 name: Move to Front
