--- a/Config&Macros/config_adxl.cfg
+++ b/Config&Macros/config_adxl.cfg
@@ -8,7 +8,12 @@ probe_points:
     150, 150, 50  # an example
 
 [input_shaper]          #RC Adicionado Acelerômetro Medição fria em 11/05/22
-shaper_freq_x: 53.0
-shaper_type_x: zv
-shaper_freq_y: 38.4
+shaper_freq_x: 56.8
+shaper_type_x: mzv
+shaper_freq_y: 38.0
 shaper_type_y: mzv
+
+[gcode_shell_command plot_graph]
+command: bash /home/pi/printer_data/config/scripts/plot_graphs.sh
+timeout: 500.0
+verbose: True
