--- a/Config&Macros/config_fans.cfg
+++ b/Config&Macros/config_fans.cfg
@@ -19,21 +19,40 @@ pin: PE5
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
-heater_temp: 50.0
+heater_temp: 60.0
 ##  If you are experiencing back flow, you can reduce fan_speed
 #fan_speed: 1.0
 
 [multi_pin fan_pin]  #RC incluido para incluir as duas Fans
 pins: PD12, PD13
 
-[controller_fan controller_fan]
+#[controller_fan controller_fan]
 ##  Controller fan - FAN2
-pin: multi_pin: fan_pin  #RC modificado para incluir as duas Fans
-kick_start_time: 0.5
-heater: heater_bed
+#pin: multi_pin: fan_pin  #RC modificado para incluir as duas Fans
+#kick_start_time: 0.5
+#heater: heater_bed
 
 [fan_generic chamber_fan]
 pin: PD14
 max_power: 1.0
 kick_start_time: 0.5
 off_below: 0.10
+
+[temperature_fan drivers_fan]
+sensor_type: chamber_temp
+sensor_type: Generic 3950
+sensor_pin: PF6
+gcode_id: E
+pin: PD15                      #Set this to your fan pin
+max_temp: 90.0                
+target_temp: 60.0             #Set this to your preferred running temperature
+min_temp: 0
+shutdown_speed: 0.0
+kick_start_time: 0.5
+off_below: 0.19
+max_speed: 0.7
+min_speed: 0.1
+control: pid
+pid_Kp: 0.2
+pid_Ki: 0.5
+pid_Kd: 0.5
