--- a/Config&Macros/config_probe.cfg
+++ b/Config&Macros/config_probe.cfg
@@ -168,7 +168,7 @@ pin: ^PG13 #PG15 Modificado TAP
 x_offset: 0
 y_offset: 0 #25.0 #19.75             #RC Modificado de "25.0" Klicky / Modificado TAP
 #z_offset: 0 # 6.42              #RC Modificado de "0" Klicky
-z_offset: -0.323 #-0.803 #-0.683 #-0.703 # -0.687 #-0.637
+z_offset: -0.300 #-0.323 #-0.803 #-0.683 #-0.703 # -0.687 #-0.637
 #   The distance (in mm) between the bed and the nozzle when the probe
 #   triggers. This parameter must be provided.
 #   Quanto mais negativo mais afastado da mesa o nozzle vai ficar
