--- a/Config&Macros/macro_print_end.cfg
+++ b/Config&Macros/macro_print_end.cfg
@@ -23,6 +23,7 @@ gcode:
     {% endif %}
     M107                                     ; turn off fan
     
+    SET_FILAMENT_SENSOR SENSOR=btt_smartie ENABLE=0 ; Disable the filament sensor
     #BED_MESH_CLEAR
     #SAVE_IF_SET     ; SAVE_CONFIG if a mesh was probed in START_PRINT
     SET_STATUS STATUS="finished" 
