--- a/Config&Macros/macro_print_start.cfg
+++ b/Config&Macros/macro_print_start.cfg
@@ -31,7 +31,7 @@ gcode:
     
     M117 Preparing to print
     {action_respond_info("**************** Preparing to print ****************")}
-    M109 S{PRINTHEAD - (0.2 * PRINTHEAD)}
+    M109 S150 ;{PRINTHEAD - (0.2 * PRINTHEAD)}
     
     CLEAR_PAUSE    ; Limpa o estado de pause caso a ultima impressao tenha sido finalizada depois de um pause e antes de um resume.
     
@@ -44,7 +44,7 @@ gcode:
     {% set min_temp = (HEATSOAK/2)-6 | float %}
     {% if min_temp >= printer['temperature_sensor enclosure_temp'].temperature %}
         M118 $MS nextstep macroid=1
-        HEAT_SOAK HEATER='heater_bed' TARGET={HEATSOAK} SOAKER='temperature_sensor enclosure_temp' RATE=0.2 TIMEOUT=60 MINTEMP={min_temp} CALLBACK='{CONTINUE}'
+        HEAT_SOAK HEATER='heater_bed' TARGET={HEATSOAK} SOAKER='temperature_sensor enclosure_temp' RATE=0.35 TIMEOUT=60 MINTEMP={min_temp} CALLBACK='{CONTINUE}'
     {% else %}
         RESPOND MSG="$MS SKIP macroid=1"
         RESPOND TYPE=echo MSG="Skiping heatsoak."
@@ -88,14 +88,13 @@ gcode:
       M118 $MS nextstep macroid=1
       SET_STATUS STATUS="qgl"
       QUAD_GANTRY_LEVEL
-      M118 $MS nextstep macroid=1
-      SET_STATUS STATUS="home"
-      G28 Z
     {% else %}
       M118 $MS skip macroid=1
-      M118 $MS skip macroid=1
     {% endif %}
-    
+    M118 $MS nextstep macroid=1
+    M190 S{HEATSOAK} ;Se a mesa ainda nao estiver na temperatura, aguardar.
+    SET_STATUS STATUS="home"
+    G28 Z           ; Home Z obrigatorio pois o PEI pode ter sido trocado.
     {% if NO_BEDMESH == 0 %}
         M118 $MS nextstep macroid=1
         SET_STATUS STATUS="bedlevel"
@@ -114,6 +113,7 @@ gcode:
     M109 S{PRINTHEAD}
     FAST_NOZZLE_WIPE
     SET_STATUS STATUS="printing"
+    SET_FILAMENT_SENSOR SENSOR=btt_smartie ENABLE=1 ; Enable the filament sensor
     {% if PRIME_NOZZLE == 1 %}
         PRIME_NOZZLE
     {% endif %}
