--- a/Config&Macros/printer.cfg
+++ b/Config&Macros/printer.cfg
@@ -138,10 +138,37 @@ path: ~/printer_data/gcodes
 # https://ellis3dp.com/Print-Tuning-Guide/articles/determining_max_speeds_accels.html
 [include macro_speed_test.cfg]
 
+#Vibration test
+# https://github.com/Frix-x/klippain/blob/main/docs/features/vibr_measurements.md
+[include macro_IS_vibrations_measurement.cfg]
+
 #####################################################################
 #   Macros Simples
 #####################################################################
     
+[gcode_macro PREPARA]
+gcode:
+    {% set bkp_speed_accel = printer.toolhead.max_accel|int %}
+    {% set bkp_speed_deaccel = printer.toolhead.max_accel_to_decel|int %}
+    {% set bkp_speed_min = printer.toolhead.square_corner_velocity|float %}
+    {% set bkp_speed_max = printer.toolhead.max_velocity|float %}
+    SET_VELOCITY_LIMIT VELOCITY=450 ACCEL=500 ACCEL_TO_DECEL=500 SQUARE_CORNER_VELOCITY=4
+    {% if "xyz" not in printer.toolhead.homed_axes %}
+      SET_STATUS STATUS="home"
+      G28
+    {% endif %}
+    SET_STATUS STATUS="wipe"
+    NOZZLE_WIPE
+    M106 S255  		; Start fan
+    {% if not printer.quad_gantry_level.applied %}
+      SET_STATUS STATUS="qgl"
+      QUAD_GANTRY_LEVEL
+      SET_STATUS STATUS="home"
+      G28 Z
+    {% endif %}
+    M106 S0  		    ; Stop fan
+    SET_VELOCITY_LIMIT VELOCITY={bkp_speed_max} ACCEL={bkp_speed_accel} ACCEL_TO_DECEL={bkp_speed_deaccel} SQUARE_CORNER_VELOCITY={bkp_speed_min}
+
 [gcode_macro AXIS_TEST]
 description: Run small test just in a Y axis
 gcode:
@@ -205,7 +232,7 @@ gcode:
       G28
     {% endif %}
     G90
-    G0 X205 Y0 Z80 F7200 #{ printer.toolhead.axis_maximum.x*2/3 } - fixei a posição para pegar o ponto do ref_index do mesh
+    G0 X205 Y0 Z150 F7200 #{ printer.toolhead.axis_maximum.x*2/3 } - fixei a posição para pegar o ponto do ref_index do mesh
 
 [gcode_macro back]
 gcode:
@@ -269,7 +296,7 @@ gcode:
 ## Y
 ## Z
 variable_pos_x: 150
-variable_pos_y: 0
+variable_pos_y: 30
 variable_pos_z: 50
 variable_spd_xy: 6000
 variable_spd_z: 1500
@@ -287,9 +314,10 @@ gcode:
 
 [gcode_macro MANUAL_HEAT]
 gcode:
-    M140 S100
+    M140 S110
     M104 S150
     SET_FAN_SPEED FAN=chamber_fan SPEED=1
+    M106 S255 ;turn on the PCF
     
 [gcode_macro DUMP_VARIABLES]
 gcode:
@@ -312,6 +340,31 @@ gcode:
     {% endfor %}
     
     {action_respond_info(out|join("\n"))}
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+    SAVE_GCODE_STATE NAME=__filament__load
+    SET_FILAMENT_SENSOR SENSOR=btt_smartie ENABLE=0
+    {% if printer.extruder.temperature < 220 %}
+        M109 S225
+    {% endif %}
+    M83
+    G1 E70 F240
+    SET_FILAMENT_SENSOR SENSOR=btt_smartie ENABLE=1
+    RESTORE_GCODE_STATE NAME=__filament__load
+
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+    SAVE_GCODE_STATE NAME=__filament__load
+    SET_FILAMENT_SENSOR SENSOR=btt_smartie ENABLE=0
+    {% if printer.extruder.temperature < 220 %}
+        M109 S225
+    {% endif %}
+    M83
+    G1 E-70 F960
+    SET_FILAMENT_SENSOR SENSOR=btt_smartie ENABLE=1
+    RESTORE_GCODE_STATE NAME=__filament__load
+
 
 #####################################################################
 #   Playground
