--- a/Config&Macros/config_extruder.cfg
+++ b/Config&Macros/config_extruder.cfg
@@ -49,6 +49,6 @@ pressure_advance: 0.03
 [tmc2209 extruder]
 uart_pin: PE1
 interpolate: false
-run_current: 0.5
+run_current: 0.55 #0.5
 sense_resistor: 0.110
 stealthchop_threshold: 0
