--- a/Config&Macros/config_steppers.cfg
+++ b/Config&Macros/config_steppers.cfg
@@ -14,8 +14,8 @@ microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
 endstop_pin: PG6
 position_min: 0
-position_endstop: 297       # RC decomentado e mudado para 297
-position_max: 297           # RC decomentado e mudao para 297
+position_endstop: 296       # RC decomentado e mudado para 297
+position_max: 298           # RC decomentado e mudao para 297
 homing_speed: 100   #Max 100
 second_homing_speed: 50
 homing_retract_dist: 3
@@ -31,7 +31,7 @@ interpolate: false
 #OMC 17hs19-2004s1
 sense_resistor: 0.110
 stealthchop_threshold: 0
-run_current: 1.2  #1.4 #0.976
+run_current: 1.4 #0.976
 #driver_TBL: 1
 #driver_TOFF: 3
 #driver_HSTRT: 0
@@ -49,8 +49,8 @@ microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
 endstop_pin: PG9
 position_min: 0
-position_endstop: 300       # RC decomentado
-position_max: 303           # RC decomentado e modificado para 301 p/ klicky
+position_endstop: 306       # RC decomentado
+position_max: 306           # RC decomentado e modificado para 301 p/ klicky
 homing_speed: 100  #Max 100
 second_homing_speed: 50
 homing_retract_dist: 3
@@ -66,7 +66,7 @@ interpolate: false
 #OMC 17hs19-2004s1
 sense_resistor: 0.110
 stealthchop_threshold: 0
-run_current: 1.2 #1.4 #0.976
+run_current: 1.4 #0.976
 #driver_TBL: 1
 #driver_TOFF: 3
 #driver_HSTRT: 0
